# connectr

./: .gitignore  Cargo.toml  shell.nix
bruno/: Acquire Rat.bru  Authenticate.bru  Get Messages.bru  Register.bru  bruno.json
src/: api.rs  auth.rs  data.rs  db_manager.rs  main.rs  request_handler.rs  resource_manager.rs
