[package]
name = "connectr"
version = "0.1.0"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "mysql", "chrono", "macros" ] }
actix-web = { version = "4.3.1", features = ["openssl"] }
serde = { version = "1.0.159" , features = ["derive"] }
clap = "4.4.18"
shellexpand = "3.1.0"
once_cell = "1.19.0"
actix-files = "0.6.5"
mime = "0.3.17"
openssl = "0.10.62"
rustls = "0.22.2"
tokio = "1.35.1"
secstr = "0.5.1"
chrono = "0.4.31"
