[package]
name = "connectr"
version = "0.1.0"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
sqlx = { version = "0.8.1", features = [ "runtime-tokio", "tls-native-tls", "mysql", "chrono", "macros", "uuid" ] }
actix-web = { version = "4.3.1", features = ["openssl", "secure-cookies"] }
serde = { version = "1.0.159" , features = ["derive"] }
uuid = {  version = "1.7.0", features = [ "v4", "serde" ] }
aes-gcm-siv = { version = "0.11.1", features = [ "alloc" ] }
openssl = { version = "0.10.62", features = [ "vendored" ] }
clap = "4.4.18"
shellexpand = "3.1.0"
actix-files = "0.6.5"
mime = "0.3.17"
rustls = "0.23.4"
tokio = "1.35.1"
secstr = "0.5.1"
chrono = "0.4.31"
sha2 = "0.10.8"
hex = "0.4.3"
uuid-simd = "0.8.0"
hex-simd = "0.8.0"
rand = "0.8.5"
